--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav>
+      <% if user_signed_in? %>
+        <%= button_to 'Sign out', destroy_user_session_path, method: :delete, class: "btn btn-danger" %>
+      <% else %>
+        <%= link_to "Login", new_user_session_path %>
+      <% end %>
+    </nav>
+
+      <%= yield %>
   </body>
+
+
 </html>
